# kaleidoscope-study

./: CMakeLists.txt
doc/: 1start.md  2parser.md  3recursiveDescent.md  4parseRest.md  5IR.md  6JIT.md  7phi.md  llvm_build.md
src/: AST.hpp  KaleidoscopeJIT.hpp  Precedence.hpp  Token.hpp  main.cpp
testscript/: test.kl
